fixed font family and letter spacing for popup boxes, release 1.2.14

--- a/css/ip.css
+++ b/css/ip.css
@@ -1,3 +1,7 @@
+#box_websiteIP * {
+	font-family: 'Arial', Helvetica, sans-serif !important;
+	letter-spacing: 0px !important;
+}
 div#box_websiteIP{
 	position: fixed;
 	bottom: 0;
@@ -8,7 +12,7 @@ div#box_websiteIP{
 	font-size: 16px;
 	font-weight: bold;
 	color: #333;
-	font-family: 'Arial', Helvetica, sans-serif;
+	font-family: 'Arial', Helvetica, sans-serif !important;
 	cursor: default;
 	z-index: 9999999999;
 	line-height: 20px;
@@ -60,6 +64,10 @@ div#box_websiteIP .websiteip-icon img {
 /* ----------------------------------------------------
  * Additional Info box
  */
+#box_websiteIP_addinfo * {
+	font-family: 'Arial', Helvetica, sans-serif !important;
+	letter-spacing: 0px !important;
+}
 div#box_websiteIP_addinfo {
 	position: fixed;
 	top: 10px;
@@ -70,7 +78,7 @@ div#box_websiteIP_addinfo {
 	font-size: 14px;
 	font-weight: bold;
 	color: #333;
-	font-family: 'Arial', Helvetica, sans-serif;
+	font-family: 'Arial', Helvetica, sans-serif !important;
 	cursor: default;
 	z-index: 9999999999;
 	line-height: 20px;
